Correção de CSS, alteração no layou, adicionando novas pastas e alterando organização do projeto.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="imgs/casa.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles/checkbox.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    
     <title>Gerenciamento de Pedidos</title>
 </head>
 <body>
@@ -32,10 +36,11 @@
       <label for="endereco">Endereço</label>
       <textarea id="endereco" name="endereco" placeholder="Endereço para entrega"></textarea>
 
-      <label for="delivery">
-        <input type="checkbox" id="delivery" name="delivery" />
-        Delivery
-      </label>
+      <label class="cl-checkbox">
+        <input type="checkbox" checked>
+            <span></span>
+             Delivery
+     </label>
 
       <button type="submit" class="submit-btn">Confirmar Pedido</button>
     </form>
