--- a/index.html
+++ b/index.html
@@ -95,17 +95,26 @@
         <textarea id="observacao" name="observacao" placeholder="Observações"></textarea>
       </div>
       <div class="form-group delivery-option">
-        <label><input type="checkbox" name="delivery" checked> Delivery</label>
+        <label><input id="checkbox-delivery" type="checkbox" name="delivery" checked> Delivery</label>
       </div>
-      <div class="form-group">
+      <div class="form-group-endereco">
         <h4>Endereço</h4>
         <textarea id="endereco" name="endereco" placeholder="Endereço para entrega"></textarea>
+      </div>
+      <div class="total-price">
+        <p>Total do Pedido:</p>
+        <span id="preco-total">R$ 0.00</span>
       </div>
       <div class="form-actions">
         <button type="button" class="submit-btn-add">Adicionar a Comanda</button>
         <button type="submit" class="submit-btn">Confirmar Pedido</button>
       </div>
     </form>
+    <section class="order-summary-container">
+      <h3>Resumo do Pedido</h3>
+      <div id="order-details">
+      </div>
+    </section>
   </main>
 
 
