Finalização da Lógica de Soma de Preço dos Produtos

--- a/index.html
+++ b/index.html
@@ -74,20 +74,20 @@
       <div class="acompanhamento-group">
         <p class="acompanhamento-title">Pagos</p>
         <div class="acompanhamento-items">
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Morango"> Morango (R$3)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Nutella"> Nutella (R$7)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Creme de Ninho"> Creme de Ninho
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="morango"> Morango (R$3)</label>
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="nutella"> Nutella (R$7)</label>
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="creme de ninho"> Creme de Ninho
             (R$5)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Creme de Amendoim"> Creme de Amendoim
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="creme de amendoim"> Creme de Amendoim
             (R$5)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Creme de Amendoim"> Creme de Côco Bianco
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="creme de coco bianco"> Creme de Côco Bianco
             (R$5)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Creme de Amendoim"> Kiwi (R$2)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Creme de Amendoim"> Ovomaltine (R$4)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Creme de Amendoim"> Bombom (R$2)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Creme de Amendoim"> MM's (R$2)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Creme de Amendoim"> Mel (R$2)</label>
-          <label><input type="checkbox" name="acompanhamentos_pagos" value="Creme de Amendoim"> Chocoball (R$2)</label>
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="kiwi"> Kiwi (R$2)</label>
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="ovomaltine"> Ovomaltine (R$4)</label>
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="bombom"> Bombom (R$2)</label>
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="mms"> MM's (R$2)</label>
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="mel"> Mel (R$2)</label>
+          <label><input type="checkbox" name="acompanhamentos_pagos" value="chocoball"> Chocoball (R$2)</label>
         </div>
       </div>
       <div class="form-group">
